Fix spacing on product detail page + added content to shopping cart

--- a/solution-hw2/CSS/testStyle.css
+++ b/solution-hw2/CSS/testStyle.css
@@ -88,6 +88,7 @@ div {
 .detail-body {
     display:flex;
     justify-content: center;
+    margin: 40px; 
 }
 
 .detail-img {
@@ -116,18 +117,34 @@ button {
     display: inline-block;
     background-color: yellow;
     width: auto;
-    height: 10%;
+    height: 50%;
     font-weight: bold;
 }
 
 .pricing {
     display: flex;
+    gap: 10 px; 
+    justify-content: flex-end;
     align-items: center;
-    justify-content: space-between;
 }
 
 p.call-to-action {
     word-wrap: break-word;
     font-size: large;
-    flex: 2
+    flex: 2;
+}
+
+.cart-item {
+    display: flex;
+}
+
+.cart-container {
+    display:flex;
+    flex-direction:column; 
+    justify-content: flex-end;
+}
+
+.total {
+    display:flex;
+    flex-direction:row;
 }
